RoleTint: fix role img z-index, release v1.0.2

--- a/themes/RoleTint/scss/main.scss
+++ b/themes/RoleTint/scss/main.scss
@@ -39,6 +39,7 @@
     }
 
     .roleIcon_aa2eb3 {
+        position: relative;
         min-width: 16px;
         z-index: 1;
     }
